@@ -149,6 +149,9 @@ Release 2.0.5-beta - UNRELEASED
     YARN-496. Fair scheduler configs are refreshed inconsistently in
     reinitialize. (Sandy Ryza via tomwhite)
 
+    YARN-209. Fix CapacityScheduler to trigger application-activation when
+    the cluster capacity changes. (Zhijie Shen via vinodkv)
+
 Release 2.0.4-alpha - UNRELEASED
 
   INCOMPATIBLE CHANGES
